--- a/static/www/css/styles.css
+++ b/static/www/css/styles.css
@@ -40,3 +40,44 @@ code {
     background: #ffe0e0;
     border: 1px solid #a33a3a;
 }
+
+.sortable {
+  border-spacing: 0;
+}
+
+
+.sortable td,
+.sortable th {
+  padding: 10px;
+}
+
+.sortable td:first-child,
+.sortable th:first-child {
+  border-top-left-radius: 4px;
+}
+
+.sortable td:last-child,
+.sortable th:last-child {
+  border-top-right-radius: 4px;
+}
+
+.sortable th {
+  cursor: pointer;
+  white-space: nowrap;
+}
+
+.sortable th:hover::after {
+  content: ' \025B8';
+}
+
+.sortable th::after {
+  content: ' \025B8';
+}
+
+.sortable th.dir-d::after {
+  content: ' \025BE';
+}
+
+.sortable th.dir-u::after {
+  content: ' \025B4';
+}
