--- a/static/www/css/nb.css
+++ b/static/www/css/nb.css
@@ -407,6 +407,10 @@ ul.task-list {
   list-style:         none;
 }
 
+li.task-list-item {
+  list-style-type: none;
+}
+
 ul.task-list input[type="checkbox"] {
   -webkit-appearance: none;
   -moz-appearance:    none;
