--- a/templates/error.html.tmpl
+++ b/templates/error.html.tmpl
@@ -1,4 +1,4 @@
-{{define "error.html.tmpl"}}
+{{define "error"}}
 <!DOCTYPE html>
 <html>
 <head>
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<h1>Error</h1>
-	<p>An error occurred: {{.}}</p>
+	<p>An error occurred: {{.error}}</p>
 </body>
 </html>
 {{end}}
