--- a/templates/index.html.tmpl
+++ b/templates/index.html.tmpl
@@ -1,25 +1,29 @@
-{{define "index.html.tmpl"}}
-<!DOCTYPE html>
-<html>
-<head>
-  {{template "styles"}}
-	<title>Notes</title>
-</head>
+{{define "index"}}
+{{template "header" .}}
 <body>
-	<h1>Notes</h1>
-	<form method="POST" action="/notes">
-		<label for="title">Title:</label><br>
-		<input type="text" id="title" name="title"><br>
-		<label for="content">Content:</label><br>
-		<textarea id="content" name="content"></textarea><br><br>
-		<input type="submit" value="Create">
-	</form>
-	<h2>Snippets</h2>
-	<ul>
-		{{range .snippets}}
-			<li><a href="/view/{{.ID}}">{{.Title}}</a></li>
-		{{end}}
-	</ul>
+  {{template "menu" .}}
+  <div class="main">
+    <form id="search" accept-charset="UTF-8" action="/command" enctype="text/plain" method="post">
+    {{ if ne .msg "" }}
+      <div>
+        {{.msg}}
+      </div>
+    {{end}}
+      <input name="command" id="search-input" placeholder="command">
+      <input type="hidden" name="path" value="/">
+    </form>
+    <ul>
+      <p class="list-item">
+        {{range .snippets}}
+          {{ if eq .Type "d" }}
+            <a rel="noopener noreferrer" class="list-item" href="/root/{{.Title}}">📁: {{.ID}} <span class="muted">[</span><span class="identifier">{{.Title}}</span><span class="muted">]</span> </a><br>
+          {{else}}
+            <a rel="noopener noreferrer" class="list-item" href="/snippet/{{.ID}}">ID: {{.ID}} <span class="muted">[</span><span class="identifier">{{.Title}}</span><span class="muted">]</span> {{.Content}}</a><br>
+          {{end}}
+        {{end}}
+      </p>
+    </ul>
+  </div>
 </body>
 </html>
 {{end}}
